data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_784.wast
;; 5. **Test Description**: Integrate a `br_table` with multiple valid targets, providing an index within bounds. Insert `nop` instructions before the `br_table` and within each target.     - **Constraint Checked**: Validate if `nop` instructions positioned around and within targets do not modify execution flow.     - **Edge Case Relation**: Proper handling of in-bound indices with `nop` instructions should yield consistent outcomes.

(assert_invalid
  (module
    (func
      (block
        (loop
          (if
            (i32.const 1)
            (then
              (br_table 0 1 2 (i32.const 0))
              (nop)
              (br_table 0 1 2 (i32.const 1))
              (nop)
            )
          )
        )
      )
    )
  )
  "type mismatch"
)